src/style.scss
@import './vars';
@import '~@primer/css';
@import './assets/fonts/iconfont.css';

:root {
  --primary-color: #384aff;
  --bg-color: white;
  --text-color: #586069;
  --link-color: #111111;
  --heading-color: #111111;
  --border-color: #d1d5da;
  --header-bg: white;
  --block-bg: transparent;
}

@font-face {
  font-family: 'Calibre';
  src: url('./assets/fonts/Calibre-Medium.eot');
  src: url('./assets/fonts/Calibre-Medium.eot?#iefix')
      format('embedded-opentype'),
    url('./assets/fonts/Calibre-Medium.woff') format('woff'),
    url('./assets/fonts/Calibre-Medium.ttf') format('truetype');
  font-weight: 500;
  font-style: normal;
}

@font-face {
  font-family: 'Calibre';
  src: url('./assets/fonts/Calibre-Semibold.eot');
  src: url('./assets/fonts/Calibre-Semibold.eot?#iefix')
      format('embedded-opentype'),
    url('./assets/fonts/Calibre-Semibold.woff') format('woff'),
    url('./assets/fonts/Calibre-Semibold.ttf') format('truetype');
  font-weight: 600;
  font-style: normal;
}

html,
body,
#app {
  background: var(--bg-color);
  color: var(--text-color);
  font-family: $body-font;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

* {
  outline: none !important;
}

h1,
h2,
h3,
h4 {
  color: var(--heading-color);
  font-weight: $font-weight-bold;
}

b {
  font-weight: $font-weight-bold;
}

p {
  font-size: 22px;
}

#app {
  min-height: 100vh;
}

a, .a {
  color: var(--link-color);

  &:hover {
    color: var(--link-color) !important;
    cursor: pointer;
    text-decoration: none !important;
  }
}

::placeholder {
  color: var(--text-color);
}

.input {
  outline: none;
  color: var(--link-color);
  background-color: transparent;
  border: none;
}

textarea {
  padding-top: 16px;
  font-size: 20px;
  line-height: 1.4em;
}

::-webkit-scrollbar-thumb {
  background-color: var(--border-color);
  background-clip: padding-box;
  border: 0;
  border-radius: 0;

  &:hover {
    background-color: var(--border-color);
  }
}

.eyebrow {
  text-transform: uppercase;
  letter-spacing: 1px;
  font-size: 16px;
}

.column {
  width: 160px;
}

.anim-fade-in {
  animation-duration: 0.6s !important;
}

.line-height-0 {
  line-height: 0;
}

.bg-black {
  background-color: var(--bg-color);
}

.State {
  font-size: 16px;
  line-height: 30px;
  height: 28px;
  vertical-align: middle;
  padding: 0 12px;
  border-radius: 14px;
}

.notification {
  color: white !important;
}

.border,
.border-md,
.border-lg,
.border-bottom,
.border-top {
  border-color: var(--border-color) !important;
}

.bg-gray-dark {
  background-color: var(--header-bg) !important;
}

.bg-gray-9 {
  background-color: var(--text-color) !important;
}

.text-primary {
  color: var(--primary-color) !important;
}

.text-gray {
  color: var(--text-color) !important;
}

.text-white {
  color: var(--link-color) !important;
}

.block-bg {
  background-color: var(--block-bg) !important;
}

.bg-blue {
  background-color: var(--primary-color) !important;
}

.tab {
  display: inline-block;
  &:first-letter {
    text-transform: capitalize;
  }
}

.menu-tabs {
  white-space: nowrap;
}

.menu-tabs::-webkit-scrollbar {
  display: none;
}

.extra-icon-container {
  position: relative;

  .extra-icon-off {
    display: none;
  }

  &:hover .extra-icon-off {
    display: inline;
  }
}

.tooltipped {
  &::before {
    border-top-color: var(--text-color) !important;
    margin-bottom: 14px;
    top: -14px !important;
  }

  &::after {
    overflow: hidden;
    text-overflow: ellipsis;
    max-width: 320px;
    margin-bottom: 14px;
    border-radius: 20px;
    padding: 6px 16px 2px;
    font-size: 16px;
    background-color: var(--text-color);
    color: var(--header-bg);
  }
}

.markdown-body blockquote {
  color: var(--text-color);
  border-left-color: var(--text-color);
}

.last-child-border-0:last-child {
  border: 0 !important;
}

.sliding {
  overflow: auto;
  white-space: nowrap;
}

.border-color {
  color: var(--border-color);
}

